Fixed overlaping issue on mobile

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -105,7 +105,8 @@
   padding: 1em;
   box-shadow: 0px 40px 50px 0 rgb(0 0 0 / 0.25);
   border-radius: 0.3em;
-  margin-top: -10em;
+  margin-top: -20em;
+  transform: scale(0.8);
 }
 
 .stingers h3 {
@@ -132,6 +133,7 @@
   }
   .stingers {
     margin-top: 0em;
+    transform: scale(1);
   }
 }
 
@@ -250,6 +252,7 @@
     transition: all 0.3s ease-in-out;
     color: white;
     border-radius: 0.1em;
+    font-weight: bolder;
     text-transform: none !important;
     img {
       margin-right: 0.7em;
